--- a/liquidwar6/doc/Makefile.gdoc
+++ b/liquidwar6/doc/Makefile.gdoc
@@ -15,6 +15,9 @@ $(srcdir)/cli-gdoc.texi: ../src/lib/cli/cli-api.c ../src/lib/cli/cli.h ../src/li
 $(srcdir)/cns-gdoc.texi: ../src/lib/cns/cns.h ../src/lib/cns/cns-handler.c ../src/lib/cns/cns-history.c ../src/lib/cns/cns-support.c ../src/lib/cns/cns-test.c ../src/lib/cns/cns-testmain.c
 	echo gdoc cns && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/cns-gdoc.texi
 
+$(srcdir)/cnx-gdoc.texi: ../src/lib/cnx/cnx-connection.c ../src/lib/cnx/cnx.h ../src/lib/cnx/cnx-test.c ../src/lib/cnx/cnx-testmain.c
+	echo gdoc cnx && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/cnx-gdoc.texi
+
 $(srcdir)/dat-gdoc.texi: ../src/lib/dat/dat-atom.c ../src/lib/dat/dat-block.c ../src/lib/dat/dat-global.c ../src/lib/dat/dat.h ../src/lib/dat/dat-internal.h ../src/lib/dat/dat-stack.c ../src/lib/dat/dat-test.c ../src/lib/dat/dat-testmain.c ../src/lib/dat/dat-warehouse.c
 	echo gdoc dat && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/dat-gdoc.texi
 
@@ -57,7 +60,7 @@ $(srcdir)/net-gdoc.texi: ../src/lib/net/net-address.c ../src/lib/net/net-const.c
 $(srcdir)/nod-gdoc.texi: ../src/lib/nod/nod-constinfo.c ../src/lib/nod/nod-dyninfo.c ../src/lib/nod/nod.h ../src/lib/nod/nod-info.c ../src/lib/nod/nod-internal.h ../src/lib/nod/nod-test.c ../src/lib/nod/nod-testmain.c
 	echo gdoc nod && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/nod-gdoc.texi
 
-$(srcdir)/p2p-gdoc.texi: ../src/lib/p2p/p2p-clioob.c ../src/lib/p2p/p2p-data.c ../src/lib/p2p/p2p-db.c ../src/lib/p2p/p2p-explore.c ../src/lib/p2p/p2p-flush.c ../src/lib/p2p/p2p.h ../src/lib/p2p/p2p-internal.h ../src/lib/p2p/p2p-node.c ../src/lib/p2p/p2p-srvoob.c ../src/lib/p2p/p2p-test.c ../src/lib/p2p/p2p-testmain.c
+$(srcdir)/p2p-gdoc.texi: ../src/lib/p2p/p2p-backends.c ../src/lib/p2p/p2p-clioob.c ../src/lib/p2p/p2p-data.c ../src/lib/p2p/p2p-db.c ../src/lib/p2p/p2p-explore.c ../src/lib/p2p/p2p-flush.c ../src/lib/p2p/p2p.h ../src/lib/p2p/p2p-internal.h ../src/lib/p2p/p2p-node.c ../src/lib/p2p/p2p-srvoob.c ../src/lib/p2p/p2p-tentacle.c ../src/lib/p2p/p2p-test.c ../src/lib/p2p/p2p-testmain.c
 	echo gdoc p2p && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/p2p-gdoc.texi
 
 $(srcdir)/pil-gdoc.texi: ../src/lib/pil/pil-bench.c ../src/lib/pil/pil-command.c ../src/lib/pil/pil-compute.c ../src/lib/pil/pil-coords.c ../src/lib/pil/pil.h ../src/lib/pil/pil-internal.h ../src/lib/pil/pil-localcursors.c ../src/lib/pil/pil-pilot.c ../src/lib/pil/pil-spread.c ../src/lib/pil/pil-test.c ../src/lib/pil/pil-testmain.c ../src/lib/pil/pil-worker.c
@@ -90,13 +93,13 @@ $(srcdir)/mod-csound-gdoc.texi: ../src/lib/snd/mod-csound/mod-csound-internal.h 
 $(srcdir)/mod-ogg-gdoc.texi: ../src/lib/snd/mod-ogg/mod-ogg-sound.c ../src/lib/snd/mod-ogg/mod-ogg-music.c ../src/lib/snd/mod-ogg/mod-ogg-repr.c ../src/lib/snd/mod-ogg/mod-ogg-setup.c ../src/lib/snd/mod-ogg/mod-ogg.h ../src/lib/snd/mod-ogg/mod-ogg-volume.c ../src/lib/snd/mod-ogg/mod-ogg-backend.c ../src/lib/snd/mod-ogg/mod-ogg-const.c ../src/lib/snd/mod-ogg/mod-ogg-internal.h ../src/lib/snd/mod-ogg/mod-ogg-path.c
 	echo gdoc mod-ogg && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/mod-ogg-gdoc.texi
 
-$(srcdir)/mod-tcp-gdoc.texi: ../src/lib/cli/mod-tcp/mod-tcp-setup.c ../src/lib/cli/mod-tcp/mod-tcp-handshake.c ../src/lib/cli/mod-tcp/mod-tcp-internal.h ../src/lib/cli/mod-tcp/mod-tcp-state.c ../src/lib/cli/mod-tcp/mod-tcp-oob.c ../src/lib/cli/mod-tcp/mod-tcp-backend.c ../src/lib/cli/mod-tcp/mod-tcp.h ../src/lib/cli/mod-tcp/mod-tcp-data.c ../src/lib/cli/mod-tcp/mod-tcp-info.c ../src/lib/cli/mod-tcp/mod-tcp-message.c
+$(srcdir)/mod-tcp-gdoc.texi: ../src/lib/cli/mod-tcp/mod-tcp-setup.c ../src/lib/cli/mod-tcp/mod-tcp-internal.h ../src/lib/cli/mod-tcp/mod-tcp-state.c ../src/lib/cli/mod-tcp/mod-tcp-oob.c ../src/lib/cli/mod-tcp/mod-tcp-backend.c ../src/lib/cli/mod-tcp/mod-tcp.h ../src/lib/cli/mod-tcp/mod-tcp-data.c ../src/lib/cli/mod-tcp/mod-tcp-info.c ../src/lib/cli/mod-tcp/mod-tcp-message.c
 	echo gdoc mod-tcp && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/mod-tcp-gdoc.texi
 
-$(srcdir)/mod-udp-gdoc.texi: ../src/lib/cli/mod-udp/mod-udp.h ../src/lib/cli/mod-udp/mod-udp-setup.c ../src/lib/cli/mod-udp/mod-udp-oob.c ../src/lib/cli/mod-udp/mod-udp-data.c ../src/lib/cli/mod-udp/mod-udp-handshake.c ../src/lib/cli/mod-udp/mod-udp-backend.c ../src/lib/cli/mod-udp/mod-udp-internal.h ../src/lib/cli/mod-udp/mod-udp-message.c ../src/lib/cli/mod-udp/mod-udp-info.c ../src/lib/cli/mod-udp/mod-udp-state.c
+$(srcdir)/mod-udp-gdoc.texi: ../src/lib/cli/mod-udp/mod-udp.h ../src/lib/cli/mod-udp/mod-udp-setup.c ../src/lib/cli/mod-udp/mod-udp-oob.c ../src/lib/cli/mod-udp/mod-udp-data.c ../src/lib/cli/mod-udp/mod-udp-backend.c ../src/lib/cli/mod-udp/mod-udp-internal.h ../src/lib/cli/mod-udp/mod-udp-message.c ../src/lib/cli/mod-udp/mod-udp-info.c ../src/lib/cli/mod-udp/mod-udp-state.c
 	echo gdoc mod-udp && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/mod-udp-gdoc.texi
 
-$(srcdir)/mod-http-gdoc.texi: ../src/lib/cli/mod-http/mod-http-get.c ../src/lib/cli/mod-http/mod-http-handshake.c ../src/lib/cli/mod-http/mod-http-info.c ../src/lib/cli/mod-http/mod-http-data.c ../src/lib/cli/mod-http/mod-http-setup.c ../src/lib/cli/mod-http/mod-http-backend.c ../src/lib/cli/mod-http/mod-http-internal.h ../src/lib/cli/mod-http/mod-http-oob.c ../src/lib/cli/mod-http/mod-http-message.c ../src/lib/cli/mod-http/mod-http-state.c ../src/lib/cli/mod-http/mod-http.h
+$(srcdir)/mod-http-gdoc.texi: ../src/lib/cli/mod-http/mod-http-get.c ../src/lib/cli/mod-http/mod-http-info.c ../src/lib/cli/mod-http/mod-http-data.c ../src/lib/cli/mod-http/mod-http-setup.c ../src/lib/cli/mod-http/mod-http-backend.c ../src/lib/cli/mod-http/mod-http-internal.h ../src/lib/cli/mod-http/mod-http-oob.c ../src/lib/cli/mod-http/mod-http-message.c ../src/lib/cli/mod-http/mod-http-state.c ../src/lib/cli/mod-http/mod-http.h
 	echo gdoc mod-http && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/mod-http-gdoc.texi
 
 $(srcdir)/mod-tcpd-gdoc.texi: ../src/lib/srv/mod-tcpd/mod-tcpd-internal.h ../src/lib/srv/mod-tcpd/mod-tcpd-handshake.c ../src/lib/srv/mod-tcpd/mod-tcpd-backend.c ../src/lib/srv/mod-tcpd/mod-tcpd-message.c ../src/lib/srv/mod-tcpd/mod-tcpd-setup.c ../src/lib/srv/mod-tcpd/mod-tcpd.h ../src/lib/srv/mod-tcpd/mod-tcpd-info.c ../src/lib/srv/mod-tcpd/mod-tcpd-data.c ../src/lib/srv/mod-tcpd/mod-tcpd-oob.c ../src/lib/srv/mod-tcpd/mod-tcpd-state.c
