--- a/liquidwar6/src/lib/liquidwar6.h.in
+++ b/liquidwar6/src/lib/liquidwar6.h.in
@@ -51,6 +51,8 @@
 #include "pil/pil.h"
 #include "net/net.h"
 #include "nod/nod.h"
+#include "cnx/cnx.h"
+#include "msg/msg.h"
 #include "cli/cli.h"
 #include "srv/srv.h"
 #include "dat/dat.h"
