--- a/liquidwar6/src/lib/msg/Makefile.in
+++ b/liquidwar6/src/lib/msg/Makefile.in
@@ -80,7 +80,7 @@ CONFIG_CLEAN_VPATH_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 libmsg_la_LIBADD =
 am_libmsg_la_OBJECTS = msg-cmd.lo msg-envelope.lo msg-oob.lo \
-	msg-test.lo msg-utils.lo msg-word.lo msg-z.lo
+	msg-test.lo msg-ticket.lo msg-utils.lo msg-word.lo msg-z.lo
 libmsg_la_OBJECTS = $(am_libmsg_la_OBJECTS)
 am__installdirs = "$(DESTDIR)$(libexecdir)" "$(DESTDIR)$(libmsgdir)"
 PROGRAMS = $(libexec_PROGRAMS)
@@ -327,7 +327,7 @@ top_srcdir = @top_srcdir@
 AM_CFLAGS = @LW6_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@ -lz
 noinst_LTLIBRARIES = libmsg.la
-libmsg_la_SOURCES = msg-cmd.c msg-envelope.c msg-oob.c msg-test.c msg-utils.c msg-word.c msg-z.c
+libmsg_la_SOURCES = msg-cmd.c msg-envelope.c msg-oob.c msg-test.c msg-ticket.c msg-utils.c msg-word.c msg-z.c
 libmsgdir = $(includedir)/@PACKAGE_TARNAME@/msg
 libmsg_HEADERS = msg.h
 @FULLSTATIC_FALSE@liquidwar6msg_test_SOURCES = msg-testmain.c
@@ -435,6 +435,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg-oob.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg-test.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg-testmain.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg-ticket.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg-utils.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg-word.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg-z.Plo@am__quote@
