--- a/liquidwar6/src/lib/dat/Makefile.in
+++ b/liquidwar6/src/lib/dat/Makefile.in
@@ -89,8 +89,9 @@ am__liquidwar6dat_test_SOURCES_DIST = dat-testmain.c
 @FULLSTATIC_FALSE@	dat-testmain.$(OBJEXT)
 liquidwar6dat_test_OBJECTS = $(am_liquidwar6dat_test_OBJECTS)
 @FULLSTATIC_FALSE@liquidwar6dat_test_DEPENDENCIES = libdat.la \
-@FULLSTATIC_FALSE@	../msg/libmsg.la ../nod/libnod.la \
-@FULLSTATIC_FALSE@	../glb/libglb.la ../sys/libsys.la
+@FULLSTATIC_FALSE@	../msg/libmsg.la ../cnx/libcnx.la \
+@FULLSTATIC_FALSE@	../nod/libnod.la ../glb/libglb.la \
+@FULLSTATIC_FALSE@	../sys/libsys.la
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -331,7 +332,7 @@ libdat_la_SOURCES = dat-atom.c dat-block.c dat-stack.c dat-test.c dat-warehouse.
 libdatdir = $(includedir)/@PACKAGE_TARNAME@/dat
 libdat_HEADERS = dat.h
 @FULLSTATIC_FALSE@liquidwar6dat_test_SOURCES = dat-testmain.c
-@FULLSTATIC_FALSE@liquidwar6dat_test_LDADD = libdat.la ../msg/libmsg.la ../nod/libnod.la ../glb/libglb.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
+@FULLSTATIC_FALSE@liquidwar6dat_test_LDADD = libdat.la ../msg/libmsg.la ../cnx/libcnx.la ../nod/libnod.la ../glb/libglb.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 EXTRA_DIST = dat-internal.h
 all: all-am
 
