Started to implement http client/server for regular non-OOB messages.

--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -407,6 +407,7 @@ src/lib/cli/mod-http/mod-http-setup.c
 src/lib/cli/mod-http/mod-http-backend.c
 src/lib/cli/mod-http/mod-http-oob.c
 src/lib/cli/mod-http/mod-http-message.c
+src/lib/cli/mod-http/mod-http-getthread.c
 src/lib/cli/mod-http/mod-http-state.c
 src/lib/cli/cli-test.c
 src/lib/cli/cli-testmain.c
