--- a/liquidwar6/debian/rules
+++ b/liquidwar6/debian/rules
@@ -33,7 +33,7 @@ endif
 config.status: configure
 	dh_testdir
 	# Add here commands to configure the package.
-	./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --bindir=\$${prefix}/games --libexecdir=\$${prefix}/games --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info CFLAGS="$(CFLAGS)"
+	./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --bindir=\$${prefix}/games --libexecdir=\$${prefix}/games --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info --enable-allinone --disable-mod-csound CFLAGS="$(CFLAGS)"
 
 
 #Architecture 
