--- a/liquidwar6-extra-maps/debian/control
+++ b/liquidwar6-extra-maps/debian/control
@@ -7,6 +7,7 @@ Standards-Version: 3.7.2
 
 Package: liquidwar6-extra-maps
 Architecture: all
+Suggests: liquidwar6 (= ${source:Version})
 Description: Extra maps for Liquid War 6
  The basic liquidwar6-data package contains some default maps, but this
  liquidwar6-extra-maps adds extra maps. They are distributed separately because
