--- a/liquidwar6-extra-maps/debian/Makefile.in
+++ b/liquidwar6-extra-maps/debian/Makefile.in
@@ -21,5 +21,5 @@
 srcdir = @srcdir@
 
 all:
-	echo "Updating Debian control files for version @PACKAGE_VERSION@"
-	if grep -q @PACKAGE_VERSION@ $(srcdir)/liquidwar6-extra-maps.dirs ; then echo "Debian control files already set up for version @PACKAGE_VERSION@" ; else sed -i "s/liquidwar6-[qa-zA-Z0-9]\+\.[a-zA-Z0-9]\+\.[a-zA-Z0-9]\+/liquidwar6-@PACKAGE_VERSION@/g" $(srcdir)/*.dirs $(srcdir)/*.install ; fi
+	echo "run make deb in parent directory"
+
